Fix #starry-galaxy Overlap Problem & Update README.md
Change z-index of #starry-galaxy to -1 and add website link to README.md.

--- a/css/main.css
+++ b/css/main.css
@@ -263,6 +263,8 @@ nav {
 
     width: 100%;
     height: 100vh;
+
+    z-index: -1;
 }
 star {
     position: absolute;
